# FaceFinder

./: .gitignore  CMakeLists.txt  CNAME  README.md
buildx64/: ALL_BUILD.vcxproj  Project.sln  TestTaskRegula.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
buildx64/app/: FindFaceApp.vcxproj  FindFaceApp.vcxproj.filters
buildx64/src/app/: FindFaceApp.vcxproj  FindFaceApp.vcxproj.filters
buildx86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TestTaskRegula.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
buildx86/src/app/: FindFaceApp.vcxproj  FindFaceApp.vcxproj.filters
src/: CMakeLists.txt  FaceFinder.cc  FacesRecognition.cc  Utils.cc
src/app/: CMakeLists.txt  FindFacesApp.cc
src/include/: FacesRecognition.h  Utils.h  jsonxx.h  threadpool.h
